# oppskrift_api

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: main.rs  router.rs
src/api/: mod.rs  recipes_controller.rs  users_controller.rs
src/api/cookbooks/: mod.rs
src/api/recipes/: mod.rs
src/entities/: cookbook.rs  mod.rs  recipe.rs  user.rs
src/entities/recipe/: ingredient.rs  instruction.rs  mod.rs
src/entities/user/: mod.rs
src/lib/: mod.rs
src/lib/activity_pub/: mod.rs
src/middlewares/: check_rights.rs  mod.rs
src/services/: database.rs  env.rs  mod.rs  server.rs
src/services/database/: mod.rs
src/tools/: mod.rs
