[package]
name = "oppskritf-api"
version = "0.0.2"
authors = ["Charles <charles.capelli@qonfucius.team>", "Djyp <d@plus.yt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Actix crates
actix = "0.10.0"
actix-rt = "1.1"
actix-web = "3.2.0"

# Database crates
diesel = { version = "1.4.5", features = ["postgres"] }

# Environnement variables
dotenv = "0.15.0" # Temporary crate to set local config, need to explore possible crates
