[package]
name = "oppskrift-api"
version = "0.1.0"
authors = ["Charles <charles.capelli@qonfucius.team>", "Djyp <d@plus.yt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.15"
dotenv = "0.15.0"
log = "0.4.14"
env_logger = "0.9.0"
diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
r2d2 = "0.8.9"
